# afx_backend

./: .env  .env.docker  .env.example  .gitignore  Dockerfile  README.md  TODO.md  cert.pem  docker-compose.yml  key.pem  package-lock.json  package.json  pyproject.toml  requirements.txt
.circleci/: config.yml
prisma/: mock.ts  schema.prisma  seed.ts
scripts/: build-and-run.sh
src/: app.module.ts  config.py  main.py  main.ts
src/affirmations/: affirmations.controller.ts  affirmations.module.ts  affirmations.service.ts
src/api/: affirmation.py  affirmation_analytic.py  auth.py  health_check.py  user.py
src/auth/: auth.controller.ts  auth.module.ts  aws-cognito.service.ts  jwt.strategy.ts
src/feedbacks/: feedbacks.controller.ts  feedbacks.service.ts
src/goals/: goals.controller.ts  goals.service.ts
src/json/: affirmation-background-sounds.json  affirmation-categories.json  affirmation-package.json  affirmation-packages.json  affirmation-voices.json  input-fileds.json
src/libraries/: libraries.controller.ts  libraries.service.ts
src/models/: affirmation.py  affirmation_background_sound.py  affirmation_listening_history.py  affirmation_package.py  affirmation_package_field.py  affirmation_statistic.py  affirmation_voice.py  billing_history.py  enums.py  field.py  payment.py  stripe.py  subscription.py  time_base_model.py  user.py  user_affirmation_package_field.py  user_crediting_system.py
src/seed/: data.ts
src/users/: users.controller.ts  users.module.ts  users.service.ts
src/utils/: affirmation.py  (+10 more)
tests/: test_app_api.py  test_default.py
(+14 files in other folders)
